merging utils file from gica