@@ -1,29 +1,38 @@
 package com.garcia.orlandi.slayerbot;
 
-import com.bueno.spi.model.CardRank;
-import com.bueno.spi.model.CardToPlay;
 import com.bueno.spi.model.TrucoCard;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class SlayerBotUtils {
 
-    public List<TrucoCard> getManilhas(List<TrucoCard> cards, TrucoCard vira) {
-        CardRank nextRank = vira.getRank().next();
-        return cards.stream()
-                .filter(card -> card.getRank() == nextRank)
-                .collect(Collectors.toList());
+    public List<TrucoCard> getManilhas(List<TrucoCard> cards, TrucoCard vira){
+        return cards.stream().filter(card -> card.isManilha(vira)).toList();
     }
 
-    public CardToPlay playWeakestManilha(List<TrucoCard> manilhas) {
-        if (manilhas.isEmpty()) {
-            throw new IllegalStateException("No manilhas found when expected.");
+    public TrucoCard getStrongestCard( List<TrucoCard> cards, TrucoCard vira){
+        TrucoCard strongerCard = cards.get(0);
+
+        for (TrucoCard card : cards) {
+            int comparison = card.compareValueTo(strongerCard, vira);
+            if (comparison > 0) {
+                strongerCard = card;
+            }
         }
-        return manilhas.stream()
-                .min(Comparator.comparing(TrucoCard::getRank))
-                .map(CardToPlay::of)
-                .orElseThrow(() -> new IllegalStateException("Failed to find the weakest manilha"));
+
+        return strongerCard;
+    }
+
+    public TrucoCard getWeakestCard( List<TrucoCard> cards, TrucoCard vira){
+        TrucoCard weakerCard = cards.get(0);
+
+        for (TrucoCard card : cards) {
+            int comparison = card.compareValueTo(weakerCard, vira);
+            if (comparison < 0) {
+                weakerCard = card;
+            }
+        }
+
+        return weakerCard;
     }
 }
